just need footer

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
 
+/* title css START*/
+.header-title {
+    background-color: rgb(235, 229, 229);
+}
+
+.compTitle {
+    font-size: 5em;
+}
+/* title css END*/
+
 /* daily ads banner START*/
 #message1 {
-    background-color: rgb(235, 229, 229);
     height: 90px;
     padding: 15px;
     display: flex;
@@ -19,6 +28,10 @@ div.hideme {
 }
 
 /* doggie age calc and display result START*/
+.dogCalc {
+    margin: 1.3em;
+}
+
 .center-doggieCalc {
     display: flex;
     justify-content: center;
@@ -51,9 +64,18 @@ img {
     width: 80%;
 }
 
-.tableContainer {
-    width: 80%;
+.page-table {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(235, 229, 229);
+    width: 70%;
+}
+
+.center-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /* Body cards END*/
 
