--- a/checkout.css
+++ b/checkout.css
@@ -1,17 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
-@import url("https://fonts.googleapis.com/css?family=Metal+Mania");
-
-@font-face {
-    font-family: "Booter - Zero Zero";
-    src: url("Fonts/Booter - Zero Zero.woff") format("woff"),
-         url("Fonts/Booter - Zero Zero.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-}
 
 * {
     box-sizing: border-box;
-    font-family: Raleway;
+    font-family: Arial, Helvetica, sans-serif;
     color: #777;
 }
 
@@ -21,55 +11,41 @@ html, body {
     min-height: 100%;
 }
 
-.nav ul {
-    margin: 0;
+header {
+    
+    flex-direction: column;
+    background-color: rgb(228, 228, 228);
+    height: 210px;
 }
 
-.nav li {
-    display: inline;
-}
-
-.nav a {
-    display: inline-block;
-    padding: .5em;
-    color: white;
+a:hover {
     text-decoration: none;
+  }
+
+.my-nav {
+    margin-top: 20px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.main-nav {
-    text-align: center;
-    font-size: 1.1em;
-    font-weight: lighter;
-    border-bottom: 1px solid rgba(255, 255, 255, .3)
+.nav-menu {
+    color: white;
+    font-weight: bold;
+    background-color: #6d6d6d;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
 }
 
-.main-nav li {
-    padding: 0 5%;
+.nav-menu:hover {
+    background-color: #2D9CDB;
+    color: white;
 }
 
 .nav a:hover {
     background-color: rgba(255, 255, 255, .3)
-}
-
-.main-header {
-    background-color: rgba(0, 0, 0, .6);
-    background-image: url("Images/Header Background.jpg");
-    background-blend-mode: multiply;
-    background-size: cover;
-    padding-bottom: 30px;
-}
-
-.band-name {
-    text-align: center;
-    margin: 0;
-    font-size: 4em;
-    font-family: "Booter - Zero Zero";
-    font-weight: normal;
-    color: white;
-}
-
-.band-name-large {
-    font-size: 8em;
 }
 
 .content-section {
@@ -82,11 +58,11 @@ html, body {
     padding: 0 1.5em;
 }
 .section-header {
-    font-family: "Metal Mania";
-    font-weight: normal;
+    font-weight: bold;
     color: #333;
     text-align: center;
-    font-size: 2.5em;
+    /* font-size: 2em; */
+    margin-top: 50px;
 }
 
 .about-band-image {
@@ -97,69 +73,16 @@ html, body {
     border-radius: 50%;
 }
 
-.main-footer {
-    background-color: #56CCF2;
-    color: white;
-    padding: .25em 0;
-}
-
-.main-footer-container {
-    display: flex;
-    align-items: center;
-}
-
-.main-footer-container ul {
-    flex-grow: 1;
-    text-align: end;
-}
-
-.footer-nav li {
-    padding: 0 .5em;
-}
-
-.footer-nav img {
-    width: 30px;
-    height: 30px;
-}
 
 .btn {
     text-align: center;
-    vertical-align: middle;
-    padding: .67em .67em;
     cursor: pointer;
 }
 
-.btn-header {
-    margin: .5em 15% 2em 15%;
-    color: white;
-    border: 2px solid #2D9CDB;
-    background-color: rgba(255, 255, 255, .1);
-    border-radius: 0;
-    font-size: 1.5em;
-    font-weight: lighter;
-    padding-left: 2em;
-    padding-right: 2em;
-}
-
-.btn-header:hover {
-    background-color: rgba(255, 255, 255, .3);
-}
-
-.btn-play {
-    display: block;
-    margin: 0 auto;
-    color: #2D9CDB;
-    font-size: 4em;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    padding: 0;
-    text-align: center;
-}
 
 .btn-primary {
     color: white;
-    background-color: #56CCF2;
+    background-color: #6d6d6d;
     border: none;
     border-radius: .3em;
     font-weight: bold;
@@ -204,6 +127,10 @@ html, body {
 
 .shop-item {
     margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .shop-item-title {
@@ -218,17 +145,23 @@ html, body {
 
 .shop-item-image {
     height: 250px;
+    box-shadow: 2px 2px 10px rgb(90, 90, 90);
 }
 
 .shop-item-details {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     align-items: center;
     padding: 5px;
 }
 
 .shop-item-price {
+    font-weight: bold;
     flex-grow: 1;
     color: #333;
+    margin-bottom: 10px;
 }
 
 .shop-items {
@@ -245,6 +178,7 @@ html, body {
 
 .cart-column {
     display: flex;
+    justify-content: center;
     align-items: center;
     border-bottom: 1px solid black;
     margin-right: 1.5em;
@@ -337,4 +271,17 @@ html, body {
     display: block;
     margin: 40px auto 80px auto;
     font-size: 1.75em;
+    background-color: rgb(79, 79, 255);
+}
+
+@media screen and (min-width: 320px) and (max-width: 740px) {
+    .nav-menu {
+        color: rgb(255, 255, 255);
+        font-weight: bold;
+        font-size: 12px;
+        background-color: #6d6d6d;
+        border-radius: 5px;
+        padding: 5px;
+        margin: 5px;
+    }
 }
