--- a/styles.css
+++ b/styles.css
@@ -124,15 +124,22 @@ div.hideme {
 }
 
 .nav-menu {
-    margin: 1em;
-    padding: .7em;
-    background-color: rgb(66, 187, 228);
-    color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #6d6d6d;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+    margin: 10px;
+    padding: 5px;
 }
 
 .nav-menu:hover {
     text-decoration: none;
     color: white;
+    background-color: #2D9CDB;
 }
 /* Nav menu END */
 
