--- a/checkout.css
+++ b/checkout.css
@@ -12,7 +12,6 @@ html, body {
 }
 
 header {
-    
     flex-direction: column;
     background-color: rgb(228, 228, 228);
     height: 210px;
@@ -48,25 +47,16 @@ a:hover {
     background-color: rgba(255, 255, 255, .3)
 }
 
-.content-section {
-    margin: 1em;
-}
-
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 0 1.5em;
-}
 .section-header {
     font-weight: bold;
     color: #333;
     text-align: center;
-    /* font-size: 2em; */
+    font-size: 2em;
     margin-top: 50px;
 }
 
 .about-band-image {
-    float: left;
+    /* float: left; */
     height: 200px;
     width: 200px;
     margin: 15px;
@@ -125,8 +115,13 @@ a:hover {
     max-width: 19%;
 }
 
+.col {
+    
+    margin: 2px;
+}
+
 .shop-item {
-    margin: 30px;
+    margin: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -134,17 +129,16 @@ a:hover {
 }
 
 .shop-item-title {
-    display: block;
-    width: 100%;
+    width: 180px;
     text-align: center;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 20px;
     color: #333;
-    margin-bottom: 15px;
+    margin: 15px;
 }
 
 .shop-item-image {
-    height: 250px;
+    height: 150px;
     box-shadow: 2px 2px 10px rgb(90, 90, 90);
 }
 
@@ -167,12 +161,12 @@ a:hover {
 .shop-items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 
 .cart-header {
     font-weight: bold;
-    font-size: 1.25em;
+    font-size: 12px;
     color: #333;
 }
 
@@ -188,6 +182,7 @@ a:hover {
 
 .cart-row {
     display: flex;
+    
 }
 
 .cart-item {
@@ -196,24 +191,25 @@ a:hover {
 
 .cart-price {
     width: 20%;
-    font-size: 1.2em;
+    font-size: 12px;
     color: #333;
 }
 
 .cart-quantity {
-    width: 35%;
+    /* width: 35%; */
+    font-size: 12px;
 }
 
 .cart-item-title {
     color: #333;
     margin-left: .5em;
-    font-size: 1.2em;
+    font-size: 12px;
 }
 
 .cart-item-image {
-    width: 75px;
+    width: 55px;
     height: auto;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .btn-danger {
@@ -222,6 +218,7 @@ a:hover {
     border: none;
     border-radius: .3em;
     font-weight: bold;
+    font-size: 10px;
 }
 
 .btn-danger:hover {
@@ -283,5 +280,17 @@ a:hover {
         border-radius: 5px;
         padding: 5px;
         margin: 5px;
+    }
+
+    .btn-danger {
+        color: white;
+        background-color: #EB5757;
+        border: none;
+        border-radius: .3em;
+        font-weight: bold;
+    }
+    
+    .btn-danger:hover {
+        background-color: #CC4C4C;
     }
 }
