--- a/checkout.css
+++ b/checkout.css
@@ -14,7 +14,7 @@ html, body {
 header {
     flex-direction: column;
     background-color: rgb(228, 228, 228);
-    height: 210px;
+    height: 150px;
 }
 
 a:hover {
@@ -51,7 +51,7 @@ a:hover {
     font-weight: bold;
     color: #333;
     text-align: center;
-    font-size: 2em;
+    font-size: 30px;
     margin-top: 50px;
 }
 
@@ -76,6 +76,7 @@ a:hover {
     border: none;
     border-radius: .3em;
     font-weight: bold;
+    font-size: 12px;
 }
 
 .btn-primary:hover {
@@ -115,13 +116,9 @@ a:hover {
     max-width: 19%;
 }
 
-.col {
-    
-    margin: 2px;
-}
+
 
 .shop-item {
-    margin: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,10 +126,10 @@ a:hover {
 }
 
 .shop-item-title {
-    width: 180px;
+    min-width: 150px;
     text-align: center;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     color: #333;
     margin: 15px;
 }
@@ -172,7 +169,7 @@ a:hover {
 
 .cart-column {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-bottom: 1px solid black;
     margin-right: 1.5em;
@@ -196,7 +193,7 @@ a:hover {
 }
 
 .cart-quantity {
-    /* width: 35%; */
+    width: 35%;
     font-size: 12px;
 }
 
